package dto;

import java.util.List;

public record HandDto(String name, List<String> hand) {

}
