@startuml
left to right direction
package Application {
  class Application {
  }
}

package domain {
  class Hands {
    - cards: List<cards>
  }

  class Name {
    - name: String
  }

  class Gambler {
    - name: String
    - hands: Hands
  }

  class Dealer {
  }

  class Player {
  }

  class Rule {
  }

  class CardShuffler {
  }

  class WinningDiscriminator {
  }

  class Round {
    - cardDeck : CardDeck
    - gamblers: List<Gambler>
  }

  class CardDeck {
    - cards: List<Card>
  }

  package card {
    class Card {
      - shape: Shape
      - value: value
    }

    Enum CardShape {
          - DIAMOND: "다이아몬드"
          - HEART: "하트"
          - CLOVER: "클로버"
          - SPADE: "스페이드"
    }

    Enum CardValue {
          - TWO: 2, "2"
          - THREE: 3, "3"
          - FOUR: 4, "4"
          - FIVE: 5, "5"
          - SIX: 6, "6"
          - SEVEN: 7, "7"
          - EIGHT: 8, "8"
          - NINE: 9, "9"
          - TEN: 10, "10"
          - KING: 10 "K"
          - QUEEN: 10, "Q"
          - JACK: 10, "J"
          - ACE: 11, "A"
    }
  }
}

package view {
  class InputView {
  }

  class OutputView {
  }

  Enum ErrorMessage {
  }

  Enum WinningType {
  }
}

Gambler -- Name
Gambler -- Hands
Player --- Gambler
Dealer --- Gambler

CardValue -- Card
CardShape -- Card

Card -- Hands
Card -- CardDeck
CardShuffler -- CardDeck

CardDeck -- Round

Round -- Gambler
Round -- WinningDiscriminator
WinningDiscriminator -- Application

Application -- Round
Application -- InputView
Application -- OutputView

@enduml
